--- a/build.gradle
+++ b/build.gradle
@@ -19,16 +19,20 @@ buildscript {
         appcompat_version = "1.4.0"
         constraintlayout_version = "2.1.2"
         core_ktx_version = "1.7.0"
-        kotlin_version = "1.5.31"
+        kotlin_version = "1.6.10"
         material_version = "1.4.0"
+        nav_version = "2.3.5"
+        lifecycle_version = "2.3.1"
+        datastore_version = "1.0.0"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
